# GD32C103_GCC

./: CMakeLists.txt  readme.md
Core/: GD32C103.ld  startup.s
Core/BSP/SRC/: QADC.c  QCAN.c  QIO.c  QLIN.c  QSD.c  QTTL.c  Qtools.c  sdcard.c
Core/BSP/include/: QADC.h  QBSP.h  QBSP_S.h  QCAN.h  QIO.h  QLIN.h  QSD.h  QTTL.h  sdcard.h
Core/FATFS/SRC/: diskio.c
Core/FATFS/include/: diskio.h  ffconf.h
Core/Firmware/GD32C10x/Include/: gd32c10x_adc.h  gd32c10x_bkp.h  gd32c10x_can.h  gd32c10x_crc.h  gd32c10x_ctc.h  gd32c10x_dac.h  gd32c10x_dbg.h  gd32c10x_dma.h  gd32c10x_exmc.h  gd32c10x_exti.h  gd32c10x_fmc.h  gd32c10x_fwdgt.h  gd32c10x_gpio.h  gd32c10x_i2c.h  gd32c10x_misc.h  gd32c10x_pmu.h  gd32c10x_rcu.h  gd32c10x_rtc.h  gd32c10x_spi.h  gd32c10x_timer.h  gd32c10x_usart.h  gd32c10x_wwdgt.h
Core/Firmware/GD32C10x/Source/: gd32c10x_adc.c  gd32c10x_bkp.c  gd32c10x_can.c  gd32c10x_crc.c  gd32c10x_ctc.c  gd32c10x_dac.c  gd32c10x_dbg.c  gd32c10x_dma.c  gd32c10x_exmc.c  gd32c10x_exti.c  gd32c10x_fmc.c  gd32c10x_fwdgt.c  gd32c10x_gpio.c  gd32c10x_i2c.c  gd32c10x_misc.c  gd32c10x_pmu.c  gd32c10x_rcu.c  gd32c10x_rtc.c  gd32c10x_spi.c  gd32c10x_timer.c  gd32c10x_usart.c  gd32c10x_wwdgt.c
Core/Firmware/GD32C10x_usbfs/device/class/audio/Include/: audio_core.h  audio_out_itf.h
Core/Firmware/GD32C10x_usbfs/device/class/audio/Source/: audio_core.c  audio_out_itf.c
Core/Firmware/GD32C10x_usbfs/device/class/cdc/Include/: cdc_acm_core.h
Core/Firmware/GD32C10x_usbfs/device/class/cdc/Source/: cdc_acm_core.c
Core/Firmware/GD32C10x_usbfs/device/class/dfu/Include/: dfu_core.h  dfu_mem.h
Core/Firmware/GD32C10x_usbfs/device/class/dfu/Source/: dfu_core.c  dfu_mem.c
Core/Firmware/GD32C10x_usbfs/device/class/hid/Include/: custom_hid_core.h  standard_hid_core.h
Core/Firmware/GD32C10x_usbfs/device/class/hid/Source/: custom_hid_core.c  standard_hid_core.c
Core/Firmware/GD32C10x_usbfs/device/class/iap/Include/: usb_iap_core.h
Core/Firmware/GD32C10x_usbfs/device/class/iap/Source/: usb_iap_core.c
Core/Firmware/GD32C10x_usbfs/device/class/msc/Include/: usbd_msc_bbb.h  (+3 more)
Core/Firmware/GD32C10x_usbfs/device/core/Include/: usbd_core.h  usbd_enum.h  usbd_transc.h
Core/Firmware/GD32C10x_usbfs/device/core/Source/: usbd_core.c  usbd_enum.c  usbd_transc.c
Core/Firmware/GD32C10x_usbfs/driver/Include/: drv_usb_core.h  drv_usb_dev.h  drv_usb_host.h  drv_usb_hw.h  drv_usb_regs.h  drv_usbd_int.h  drv_usbh_int.h
Core/Firmware/GD32C10x_usbfs/driver/Source/: drv_usb_core.c  drv_usb_dev.c  drv_usb_host.c  drv_usbd_int.c  drv_usbh_int.c
Core/Firmware/GD32C10x_usbfs/host/core/Include/: usbh_core.h  usbh_enum.h  usbh_pipe.h  usbh_transc.h
Core/Firmware/GD32C10x_usbfs/host/core/Source/: usbh_core.c  usbh_enum.c  usbh_pipe.c  usbh_transc.c
Core/Firmware/GD32C10x_usbfs/ustd/class/cdc/: usb_cdc.h
Core/Firmware/GD32C10x_usbfs/ustd/class/hid/: usb_hid.h
Core/Firmware/GD32C10x_usbfs/ustd/class/msc/: msc_bbb.h  msc_scsi.h  usb_msc.h
Core/Firmware/GD32C10x_usbfs/ustd/common/: usb_ch9_std.h
Core/FreeRTOS/src/: port.c
Core/main/Inc/: gd32c10x.h  gd32c10x_it.h  gd32c10x_libopt.h  version.h
Core/main/Src/: gd32c10x_it.c  main.c  system_gd32c10x.c
User/SRC/: Qtools.c  readelf.c  security.c  vmain.c
User/include/: FreeRTOSConfig.h  Uversion.h  main.h  upgrade.h  userconf.h
(+16 files in other folders)
